<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mapbox_cameraTargetLat="39.7449"
        app:mapbox_cameraTargetLng="-104.9645"
        app:mapbox_cameraZoom="8"
        app:mapbox_scaleBarGravity="bottom|end"/>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/initialize_sdk_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initialize_sdk"
                android:layout_gravity="center"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/sdk_init_progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"
                android:layout_gravity="center"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_trails_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/add_trails"
                android:gravity="center" />


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/add_trails_progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"
                android:layout_gravity="center"/>

        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_trails_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/remove_trails" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_accuterra_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/set_accuterra_style" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>